# MITE_augmentation

./: .gitattributes  .gitignore  AUGMENTATION_LOGIC.md  README.md  augment_mite_grammar.py  mite_rdchiral.tsv  requirements.txt
mite_data/: .gitignore  CHANGELOG.md  README.md  erythromycin_merged_peel_test.json  erythromycin_reverse_peel_test.json  extract_rdchiral_from_smarts.py  extract_rdchiral_templates.py  mite_rdchiral_failures.jsonl  mite_rdchiral_from_smarts.jsonl  mite_rdchiral_from_smarts_summary.json  mite_rdchiral_templates.jsonl  mite_rdchiral_templates_by_term.json  multi_bgc_merged_peel_test.json  pyproject.toml  test_erythromycin_reverse_peel.py
mite_data/.github/workflows/: housekeeping.yml
mite_data/mite_data/data/: MITE0000002.json  MITE0000011.json  MITE0000012.json  MITE0000013.json  MITE0000025.json  MITE0000026.json  MITE0000030.json  MITE0000037.json  MITE0000038.json  MITE0000039.json  MITE0000040.json  MITE0000041.json  MITE0000042.json  MITE0000055.json  MITE0000071.json  MITE0000073.json  MITE0000074.json  MITE0000075.json  MITE0000093.json  MITE0000094.json  MITE0000095.json  MITE0000096.json  MITE0000099.json  MITE0000102.json  MITE0000103.json  MITE0000104.json  MITE0000106.json  MITE0000110.json  MITE0000111.json  MITE0000112.json  MITE0000113.json  MITE0000114.json  MITE0000115.json  MITE0000116.json  MITE0000117.json  MITE0000118.json  MITE0000119.json  MITE0000120.json  MITE0000128.json  MITE0000132.json  (+169 more)
mite_data/mite_data/fasta/: MITE0000002.fasta  MITE0000037.fasta  MITE0000038.fasta  MITE0000039.fasta  MITE0000040.fasta  MITE0000041.fasta  MITE0000042.fasta  MITE0000071.fasta  MITE0000073.fasta  MITE0000074.fasta  MITE0000075.fasta  MITE0000093.fasta  MITE0000110.fasta  MITE0000111.fasta  MITE0000112.fasta  MITE0000113.fasta  MITE0000114.fasta  MITE0000115.fasta  MITE0000119.fasta  MITE0000120.fasta  MITE0000180.fasta  MITE0000181.fasta  MITE0000228.fasta  MITE0000267.fasta  MITE0000273.fasta  MITE0000286.fasta  MITE0000287.fasta  MITE0000288.fasta  MITE0000292.fasta  MITE0000297.fasta  MITE0000298.fasta  (+137 more)
(+10 files in other folders)
