[build-system]
requires = ["uv_build >= 0.11.7, <0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "mite_data_lib"
module-root = ""

[project]
name = "mite_data"
version = "1.30"
description = "Data storage and auxiliary functions for mite_data."
readme = "README.md"
requires-python = ">=3.12.0"
license-files = ["LICENSE"]
authors = [
    { name = "Mitja M. Zdouc", email = "zdoucmm@gmail.com" }
]
keywords = [
    "cheminformatics",
    "genomics"
]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry"
]

dependencies = [
    "biopython~=1.85",
    "mite_extras>=1.6.6",
    "mite_schema>=1.8.5",
    "pandas~=2.3",
    "pydantic~=2.11",
    "requests~=2.32",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[project.urls]
"Repository" = "https://github.com/mite-standard/mite_data"

# Below are settings for different tools we use for testing and linting

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # flake8-eradicate/eradicate
    "ERA",
    # isort
    "I",
    # pep8-naming
    "N",
    # flake8-pie
    "PIE",
    # pygrep
    "PGH",
    # ruff checks
    "RUF",
    # flake8-simplify
    "SIM",
    # flake8-type-checking
    "TCH",
    # flake8-tidy-imports
    "TID",
    # pyupgrade
    "UP",
]
ignore = [
    # whitespace-before-punctuation
    "E203",
    # percent-format-invalid-format
    "E501",
    # mixed-case-variable-in-class-scope
    "N815",
    # enumerate
    "SIM113",
    # multiple ifs
    "SIM102",
    # unnecessary set
    "C405",
    # return simplification
    "SIM103",
    # I like using dict calls
    "C408"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests/",
]
pythonpath = [
    "."
]
